--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="subSection">
                   <div>
                       <p> Duis Ature eule Duis Ature euleDuis.euleDuis Ature euleDuis Ature euleDuis Ature eule Duis Ature euleDuis Ature.  euleDuis Ature euleDuis eule </p>
-                      <h6>@Jane Doe</h6>
+                      <h6>@Jane Hey</h6>
                   </div>
                   <div>
                         <p>Duis Ature eule Duis Ature euleDuis.euleDuis Ature euleDuis Ature euleDuis Ature eule Duis Ature euleDuis.euleDuis Ature euleDuis Ature eule</p>
